<resources>
    <string name="app_name">Vegeken</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="title_activity_sos">SOS</string>
    <string name="title_activity_tip">New Tip</string>
    <string name="tips_cpr">Compressions: Restore blood circulation\nAirway: Open the airway\nBreathing: Breathe for the person</string>
    <string name="tips_heat">Cool the entire body by sponging or spraying cold water, and fan the person to help lower the body temperature.</string>
    <string name="tips_choke">Stand behind the person.\nMake a fist with one hand.\nGrasp the fist with the other hand.\nPerform between six and 10 abdominal thrusts</string>
    <string name="tips_burn">cool the burn with cool or lukewarm running water for 20 minutes\nremove any clothing or jewellery that\'s near the burnt area of skin\nmake sure the person keeps warm</string>
    <string name="tips_heart">the pills are in the left pocket of my coat</string>
    <string name="title_activity_fake_tip">New Tip</string>
    <string name="title_activity_maps">Map</string>
    <string name="HospitalTel">tel: 2208 0111</string>
    <string name="HospitalWaitingTime">Waiting Time:\n\tOver 1 hour</string>
    <string name="HospitalName">將軍澳醫院</string>
    <string name="DetailHospitalIntro">將軍澳醫院於1999年成立，是一所提供第二層醫護服務的醫院，強調以社區為本。醫院致力與其他醫療伙伴加強合作，提供優質無間的服務，以應付西貢和將軍澳區與日俱增的人口。這是醫管局首間採納三角形病房設計的醫院，病房中央設有開放式的工作間，方便醫護人員觀察病人；也能充份有效地使用空間，提升臨床服務的效率。將軍澳醫院、基督教靈實協會和香港浸會大學合作，營運中醫診所，並於2006年4月正式啟用。在2007年，亦開設日間手術中心，進一步加強日間手術服務。</string>
    <string name="Location">將軍澳坑口寶寧里 2 號</string>

</resources>
