<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SOSActivity"
    tools:showIn="@layout/activity_sos">

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="140dp"
        android:layout_height="140dp"

        android:layout_marginTop="20dp"
        android:background="#FF0000"
        android:onClick="startOrStopAlarm"
        android:src="@drawable/ic_priority_high_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:text="Tips"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="#E9E9E9"
                android:drawableBottom="@color/colorPrimary"
                android:singleLine="false"
                android:text="@string/tips_cpr"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="#FFFFFF"
                android:drawableBottom="@color/colorPrimary"
                android:singleLine="false"
                android:text="@string/tips_heat"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="#E9E9E9"
                android:drawableBottom="@color/colorPrimary"
                android:singleLine="false"
                android:text="@string/tips_choke"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="#FFFFFF"
                android:drawableBottom="@color/colorPrimary"
                android:singleLine="false"
                android:text="@string/tips_burn"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="#E9E9E9"
                android:drawableBottom="@color/colorPrimary"
                android:singleLine="false"
                android:text="@string/tips_heart"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>