<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HospitalChoosing"
    tools:showIn="@layout/activity_hospital_choosing">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <EditText
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                />
            <Button
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="Search"
                android:textSize="15dp"
                android:layout_height="match_parent"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:padding="10dp"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="自動篩選"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="等待時間"
                android:drawableRight="@drawable/arror"
                />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:drawableRight="@drawable/arror"
                android:text="距离"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:drawableRight="@drawable/arror"
                android:text="價格"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="科室"
                android:drawableRight="@drawable/arror"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="10dp"
            >
            <TextView
                android:id="@+id/vt2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/HospitalName"
                android:textSize="25sp"
                android:gravity="center"
                android:textColor="#000000"/>
            <LinearLayout
                android:id="@+id/Ll2"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="Waiting Time: Over an hour"
                    android:textColor="#000000"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/HospitalTel"
                    android:textColor="#000000"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/Location"
                    android:textColor="#000000"
                    android:gravity="center"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/bt2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="goToGoogleMap"
                android:text="Google Map Navigation"
                android:textSize="12dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="10dp"
            >
            <TextView
                android:id="@+id/vt3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/HospitalName"
                android:textSize="25sp"
                android:gravity="center"
                android:textColor="#000000"/>
            <LinearLayout
                android:id="@+id/Ll3"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="Waiting Time: Over an hour"
                    android:textColor="#000000"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/HospitalTel"
                    android:textColor="#000000"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/Location"
                    android:textColor="#000000"
                    android:gravity="center"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/bt3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="Google Map Navigation"
                android:textSize="12dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="10dp"
            >
            <TextView
                android:id="@+id/vt4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/HospitalName"
                android:textSize="25sp"
                android:gravity="center"
                android:textColor="#000000"/>
            <LinearLayout
                android:id="@+id/Ll4"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="Waiting Time: Over an hour"
                    android:textColor="#000000"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/HospitalTel"
                    android:textColor="#000000"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/Location"
                    android:textColor="#000000"
                    android:gravity="center"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/bt4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="Google Map Navigation"
                android:textSize="12dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="10dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/HospitalName"
                android:textSize="25sp"
                android:gravity="center"
                android:textColor="#000000"/>
            <LinearLayout

                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="Waiting Time: Over an hour"
                    android:textColor="#000000"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/HospitalTel"
                    android:textColor="#000000"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/Location"
                    android:textColor="#000000"
                    android:gravity="center"
                    />
            </LinearLayout>
            <Button

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="Google Map Navigation"
                android:textSize="12dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="10dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/HospitalName"
                android:textSize="25sp"
                android:gravity="center"
                android:textColor="#000000"/>
            <LinearLayout

                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="Waiting Time: Over an hour"
                    android:textColor="#000000"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/HospitalTel"
                    android:textColor="#000000"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/Location"
                    android:textColor="#000000"
                    android:gravity="center"
                    />
            </LinearLayout>
            <Button

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="Google Map Navigation"
                android:textSize="12dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="10dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/HospitalName"
                android:textSize="25sp"
                android:gravity="center"
                android:textColor="#000000"/>
            <LinearLayout

                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="Waiting Time: Over an hour"
                    android:textColor="#000000"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/HospitalTel"
                    android:textColor="#000000"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/Location"
                    android:textColor="#000000"
                    android:gravity="center"
                    />
            </LinearLayout>
            <Button

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="Google Map Navigation"
                android:textSize="12dp"/>

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>